k8s/payment_gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway
  namespace: globalfinance
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-gateway
  template:
    metadata:
      labels:
        app: payment-gateway
    spec:
      serviceAccountName: payment-gateway-sa
      containers:
      - name: payment-gateway
        image: globalfinanceacraman.azurecr.io/payment-gateway:v1
        ports:
          - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway
  namespace: globalfinance
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: payment-gateway
