k8s/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: globalfinance
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: globalfinance
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
          - containerPort: 5432

        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data
          - name: init
            mountPath: /docker-entrypoint-initdb.d

        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - pg_isready -U postgres
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          exec:
            command:
              - sh
              - -c
              - pg_isready -U postgres
          initialDelaySeconds: 30
          periodSeconds: 15

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"

      volumes:
        - name: init
          configMap:
            name: postgres-init

  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: globalfinance
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
