k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-gateway-ingress
  namespace: globalfinance
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/process-payment
        pathType: Prefix
        backend:
          service:
            name: payment-gateway
            port:
              number: 80
